router and simple form UI

--- a/src/app/core/shell/sidenav/sidenav.component.html
+++ b/src/app/core/shell/sidenav/sidenav.component.html
@@ -91,6 +91,12 @@
           </mat-icon>
           <a matLine>Chart of Accounts</a>
         </mat-list-item>
+        <mat-list-item [routerLink]="['/accounting/transaction/create']">
+          <mat-icon matListIcon>
+            <fa-icon icon="upload" size="sm"></fa-icon>
+          </mat-icon>
+          <a matLine>Create Transaction</a>
+        </mat-list-item>
       </mat-nav-list>
 
     </div>
